--- a/src/app/header/intro/intro.component.html
+++ b/src/app/header/intro/intro.component.html
@@ -1,8 +1,8 @@
 <section #target class="intro darkmode section">
   <div class="intro__content">
-    <div class="intro__content__title">
+    <!-- <div class="intro__content__title">
       <app-title [title]="intro.title"></app-title>
-    </div>
+    </div> -->
     <div
       class="intro__content__text"
       *ngFor="let text of intro.text; let i = index"
