--- a/src/app/component/box/box.component.scss
+++ b/src/app/component/box/box.component.scss
@@ -2,19 +2,17 @@
 
 .box {
   &__content {
-    color: $white;
     &__element {
       padding: 10px;
       text-align: center;
     }
     &__title {
+      color: $white;
       background-color: $darkmode;
-      z-index: 1;
     }
     &__item {
       &__one-element {
-        z-index: -1;
-        background: $gradient180;
+        border-bottom: 2px solid $black;
       }
     }
   }
