passion animation done

--- a/src/app/component/box/box-item/box-item.component.html
+++ b/src/app/component/box/box-item/box-item.component.html
@@ -1,4 +1,4 @@
-<section class="box-item">
+<section class="box-item slideDownEffect" [class.active]="condition">
   <div class="box-item__content">
     <div class="box-item__content__title">{{ item.title }}</div>
     <div class="box-item__content__picto">
