--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -4,5 +4,5 @@
   <app-experience></app-experience>
   <app-language></app-language>
   <app-passion></app-passion>
-  <app-project></app-project>
+  <!-- <app-project></app-project> -->
 </section>
