--- a/src/app/component/box/box.component.html
+++ b/src/app/component/box/box.component.html
@@ -1,10 +1,10 @@
 <section class="box">
   <div class="box__content">
-    <div class="box__content__title box__content__element">{{ box.title }}</div>
+    <div class="box__content__title">{{ box.title }}</div>
     <div class="box__content__item">
       <div
         *ngFor="let item of box.example; let i = index"
-        class="box__content__item__one-element box__content__element"
+        class="box__content__item__one-element"
       >
         <app-box-item
           [isVisible]="condition"
