--- a/src/app/header/intro/intro.component.html
+++ b/src/app/header/intro/intro.component.html
@@ -1,4 +1,4 @@
-<section class="intro darkmode section">
+<section class="intro section darkmode">
   <div class="intro__content">
     <div class="intro__content__text">
       <app-text [text]="intro.text" [nbrItems]="intro.text.length"></app-text>
