--- a/src/app/component/box/box-item/box-item.component.scss
+++ b/src/app/component/box/box-item/box-item.component.scss
@@ -8,9 +8,12 @@
     justify-content: center;
     align-items: center;
     &__picto {
+      padding-left: 15px;
       width: 100%;
       max-width: 40px;
-      padding-left: 15px;
+      @media screen and (min-width: $small) {
+        width: 40px;
+      }
     }
   }
 }
