--- a/src/app/footer/github/github.component.html
+++ b/src/app/footer/github/github.component.html
@@ -1,3 +1,7 @@
 <section class="github section darkmode">
-  <div class="github__content"></div>
+  <div class="github__content">
+    <div class="github__content__text">
+      <app-text [text]="github.text" [nbrItems]="github.text.length"></app-text>
+    </div>
+  </div>
 </section>
