add link for github

--- a/src/app/footer/github/github.component.html
+++ b/src/app/footer/github/github.component.html
@@ -1,7 +1,12 @@
-<section class="github section darkmode">
-  <div class="github__content">
-    <div class="github__content__text">
-      <app-text [text]="github.text" [nbrItems]="github.text.length"></app-text>
+<a href="{{ github.link }}" target="{{ github.link }}">
+  <section class="github section darkmode clickable">
+    <div class="github__content">
+      <div class="github__content__text">
+        <app-text
+          [text]="github.text"
+          [nbrItems]="github.text.length"
+        ></app-text>
+      </div>
     </div>
-  </div>
-</section>
+  </section>
+</a>
