--- a/src/stylesheets/styles.scss
+++ b/src/stylesheets/styles.scss
@@ -46,7 +46,7 @@ a {
   transition-duration: 200ms;
   text-decoration: none;
   &:hover {
-    background-color: red;
+    background-color: $darkmode-hover;
   }
 }
 
