--- a/src/app/header/user/user.component.html
+++ b/src/app/header/user/user.component.html
@@ -9,7 +9,7 @@
         class="user__content__profile-picture__easter-egg blurEffect faster"
         [class.active]="condition3"
       >
-        <img src="../../../assets/pic/sunglasses.png" alt="easter-egg" />
+        <!-- <img src="../../../assets/pic/sunglasses.png" alt="easter-egg" /> -->
       </div>
     </div>
     <div
