--- a/src/app/header/user/user.component.html
+++ b/src/app/header/user/user.component.html
@@ -9,6 +9,7 @@
         class="user__content__profile-picture__easter-egg blurEffect faster"
         [class.active]="condition3"
       >
+        <img src="{{ user.easterEgg.src }}" alt="{{ user.easterEgg.src }}" />
         <!-- <img src="../../../assets/pic/sunglasses.png" alt="easter-egg" /> -->
       </div>
     </div>
