fixed header style

--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,4 +1,5 @@
 <section class="body">
+  <app-intro></app-intro>
   <app-formation></app-formation>
   <app-competence></app-competence>
   <app-experience></app-experience>
