fixed the height of 404 page

--- a/src/app/app-core/cv/cv.component.html
+++ b/src/app/app-core/cv/cv.component.html
@@ -1,7 +1,9 @@
 <section class="cv">
   <div class="cv__content">
+    <app-copyright></app-copyright>
     <app-header></app-header>
     <app-body></app-body>
     <app-footer></app-footer>
+    <app-copyright></app-copyright>
   </div>
 </section>
