--- a/src/app/component/not-found/not-found.component.html
+++ b/src/app/component/not-found/not-found.component.html
@@ -1,5 +1,5 @@
 <section class="not-found section darkmode">
-  <div class="not-found__content">
+  <div class="not-found__content" [ngStyle]="{ 'height.px': windowHeight }">
     <div class="not-found__content__gif">
       <iframe
         src="https://giphy.com/embed/6uGhT1O4sxpi8"
