added mentions legales

--- a/src/app/component/mentions-legales/mentions-legales.component.html
+++ b/src/app/component/mentions-legales/mentions-legales.component.html
@@ -1,1 +1,9 @@
-<p>mentions-legales works!</p>
+<section class="mentions-legales section darkmode">
+  <div class="mentions-legales__content">
+    {{ frText }} <br />
+    {{ frDate }} {{ date }} <br />
+    <br />
+    {{ enText }} <br />
+    {{ enDate }} {{ date }} <br />
+  </div>
+</section>
