--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,8 +1,13 @@
 <section class="body">
   <app-intro></app-intro>
+  TEEEEEEEEST
   <app-formation></app-formation>
+  TEEEEEEEEST
   <app-competence></app-competence>
+  TEEEEEEEEST
   <app-experience></app-experience>
+  TEEEEEEEEST
   <app-language></app-language>
+  TEEEEEEEEST
   <app-passion></app-passion>
 </section>
