styled a little admin

--- a/src/app/component/admin/admin.component.html
+++ b/src/app/component/admin/admin.component.html
@@ -1,1 +1,5 @@
-<p>admin works!</p>
+<section class="admin section darkmode">
+  <div class="admin__content" [ngStyle]="{ 'height.px': windowHeight }">
+    ADMIN
+  </div>
+</section>
