--- a/src/app/component/admin/single-admin/single-admin.component.html
+++ b/src/app/component/admin/single-admin/single-admin.component.html
@@ -1,1 +1,5 @@
-<p>single-admin works!</p>
+<section class="single-admin">
+  <div class="single-admin__content">
+    SINGLE-ADMIN
+  </div>
+</section>
