--- a/src/app/component/admin/admin.component.html
+++ b/src/app/component/admin/admin.component.html
@@ -1,5 +1,10 @@
 <section class="admin section darkmode">
   <div class="admin__content" [ngStyle]="{ 'height.px': windowHeight }">
-    ADMIN
+    <div class="admin__content__signin admin__content__segment">
+      <app-sign-in></app-sign-in>
+    </div>
+    <div class="admin__content__newaccount admin__content__segment">
+      <app-new-account></app-new-account>
+    </div>
   </div>
 </section>
