--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -2,6 +2,7 @@
   <app-intro></app-intro>
   <app-formation></app-formation>
   <app-competence></app-competence>
+  <app-knowledge></app-knowledge>
   <app-experience></app-experience>
   <app-language></app-language>
   <app-passion></app-passion>
