move intro component

--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,5 +1,6 @@
 <section class="body">
   <app-intro></app-intro>
+  SECTION "A PROPOS DE MOI" parler de ce qui me plait, mes loisirs, moi! SECTION
   <app-formation></app-formation>
   <app-competence></app-competence>
   <app-knowledge></app-knowledge>
