new about me component

--- a/src/app/body/passion/passion.component.html
+++ b/src/app/body/passion/passion.component.html
@@ -11,5 +11,8 @@
         <app-box [isVisible]="isVisible" [box]="box" [index]="i"></app-box>
       </div>
     </div>
+    <div class="passion__content__aboutme">
+      <app-about-me></app-about-me>
+    </div>
   </div>
 </section>
