--- a/src/app/header/contact/contact.component.html
+++ b/src/app/header/contact/contact.component.html
@@ -38,12 +38,14 @@
       >
         E-mail :
       </div>
-      <div
+      <a
+        href="mailto:{{ contact.mail }}"
+        target="_blank"
         class="contact__content__info__text slideLeftEffect"
         [class.active]="conditionVariable"
       >
         {{ contact.mail }}
-      </div>
+      </a>
     </div>
   </div>
 </section>
