--- a/src/app/header/copyright/copyright.component.html
+++ b/src/app/header/copyright/copyright.component.html
@@ -1,5 +1,5 @@
 <section #target class="copyright blurEffect" [class.active]="condition">
   <div class="copyright__text">
-    This curriculum vitæ was made on AngularJS by Antoine MORTELIER
+    This curriculum vitæ was made on Angular by Antoine MORTELIER
   </div>
 </section>
