--- a/src/app/header/user/user.component.html
+++ b/src/app/header/user/user.component.html
@@ -19,7 +19,7 @@
       <div class="user__content__info__name">
         {{ user.firstName }} {{ user.lastName }}
       </div>
-      <div class="user__content__info__age">{{ user.age }} ans</div>
+      <div class="user__content__info__age">{{ userAge }} ans</div>
     </div>
   </div>
 </section>
