--- a/src/app/component/box/box-item/box-item.component.scss
+++ b/src/app/component/box/box-item/box-item.component.scss
@@ -11,8 +11,15 @@
       padding-left: 15px;
       width: 100%;
       max-width: 40px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       @media screen and (min-width: $small) {
         width: 40px;
+      }
+
+      img {
+        max-width: 100%;
       }
     }
   }
